--- a/Styles.css
+++ b/Styles.css
@@ -146,10 +146,11 @@
       width:125px;
       height:60px;
       font-size:80%;
+      gap:20px;
     }
     
   }
-  @media(max-width:480px){
+  @media(min-width:360px){
     .Whodat{
       width:250px;
         
@@ -159,11 +160,12 @@
       width:300px;
     }
     .buttons{
-      width:80px;
+      width:70px;
       height:60px;
-      font-size:80%;
+      font-size:75%;
+      gap:15px;
     }
     h2{
-      font-size:20px;
+      font-size:10px;
     }
   }
