--- a/Styles.css
+++ b/Styles.css
@@ -167,8 +167,11 @@
       margin-left:5px;
       margin-right:0px;
     }
+    .buttons-div{
+      top:60%;
+    }
     h2{
-      font-size:50px;
+      font-size:25px;
     }
     
   }
