--- a/Styles.css
+++ b/Styles.css
@@ -284,7 +284,9 @@
 
 
 }
-@media screen and (max-width: 720px)   
+@media screen 
+and (min-width: 200px)
+and (max-width: 720px)   
   {
     .Whodat{
       width:1px;
